the alignment is fixed

--- a/css/main.css
+++ b/css/main.css
@@ -325,7 +325,7 @@ body {
 }
 
 .about-image:hover {
-    outline: 10px solid #d3325f;
+    outline: 10px solid #0c8f22;
     outline-offset: 0.8rem;
     transform: scale(1.3) rotate(20deg);
     z-index: 30;
